--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gulp-cache": "^0.4.6",
     "gulp-css-purge": "^1.0.27",
     "gulp-cssnano": "^2.1.2",
+    "gulp-exit": "0.0.2",
     "gulp-htmlclean": "^2.7.14",
     "gulp-imagemin": "^3.3.0",
     "gulp-newer": "^1.3.0",
@@ -17,7 +18,10 @@
     "gulp-rename": "^1.2.2",
     "gulp-size": "^2.1.0",
     "gulp-svgo": "^1.1.1",
-    "gulp-uncss": "^1.0.6"
+    "gulp-uncss": "^1.0.6",
+    "ngrok": "^2.2.13",
+    "psi": "^3.0.0",
+    "run-sequence": "^2.0.0"
   },
   "description": "Stephen Asamoah — Front-End Web Developer",
   "main": "Gulpfile.js",
@@ -28,14 +32,17 @@
     "gulp-cache": "^0.4.6",
     "gulp-cache-bust": "^1.1.0",
     "gulp-concat": "^2.6.1",
+    "gulp-critical-css": "^1.0.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-print": "^2.0.1",
     "gulp-run": "^1.7.1",
     "gulp-sass": "^3.1.0",
+    "gulp-string-replace": "^0.4.0",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
     "imagemin-jpegtran": "^5.0.2",
     "imagemin-svgo": "^5.2.2",
+    "json.sortify": "^2.2.1",
     "node-sass-asset-functions": "^0.1.0",
     "run-sequence": "^2.0.0"
   },
