#HTML and CSS Fixes - Removed dummy stylesheet from HTML. No longer relevant for Pagespeed compensation. - Removed excess padding from contact heading. - Added README - Added generated CSS to source directory
#HTML5 Outliner
Fixed page outline using HTML5 Outliner Guide
    * Affected pages:
        - header.html
        - footer.html

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ permalink: /:categories/:title
 
 collections:
   projects:
-    output: true
+    #output: true
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: https://www.webcollective.ml # the base hostname & protocol for your site, e.g. http://example.com
@@ -33,9 +33,9 @@ behance_username: stephenasamoah
 
 # Build settings
 markdown: kramdown
-#theme: minima
+theme: minima
 plugins:
- # - jekyll-feed
+  - jekyll-feed
 
 #highlighter: pygments
 
@@ -45,7 +45,7 @@ links:
     - title: projects
       url: /projects
     - title: find me
-      url: /contact
+      url: /find-me
 
 
 
