#CSS Optimizations   - Improved appearance of inline links   - Removed minima theme from _config.yml (Reason: was creating duplicate css <main.css> in destination dir   - Removed <clean> task from build-sequence (Reason: was causing delay in <imagemin> task)

--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ behance_username: stephenasamoah
 
 # Build settings
 markdown: kramdown
-theme: minima
+#theme: minima
 plugins:
   - jekyll-feed
 
