# Major Fix for Critical Generation   SVG references above-the-fold culprit for neglected classes in HTML. Explicitly appending height="auto" to svg options  fixed it. Note: triggers console errors.
# Other  changes for CSS
  - Set minify to false for Autoprefixr option in pleeease => cssnano does minification
  - CSS files in "generated" directory no longer minified for readability and bug fixing purposes.
  - Removed "critical: this;" leftover code from uncss task
  - Changed critical path to _assets directory => is now staging file for concat-group options in critical task
  - Removed leftover psi option in paths.js file
  - Updated cleanPath

 # Misc
  - Created git sub-module under _assets for local asset management
  - Updated PNG images under _assets
  - Optimized Gulp tasks

--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
   "dependencies": {
     "browser-sync": "^2.18.12",
     "critical": "^0.8.4",
+    "group-css-media-queries": "^1.4.1",
     "gulp": "^3.9.1",
     "gulp-cache": "^0.4.6",
     "gulp-cache-bust": "^1.1.0",
     "gulp-concat": "^2.6.1",
     "gulp-critical-css": "^1.0.1",
     "gulp-gh-pages": "^0.5.4",
+    "gulp-group-css-media-queries": "^1.2.0",
     "gulp-print": "^2.0.1",
     "gulp-run": "^1.7.1",
     "gulp-sass": "^3.1.0",
