--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@
 /Gemfile.lock
 node_modules/
 _site
-_assets/images
+assets
 bower_components/
 /.publish/
 /css/
-/assets/images/portfolio/portfolio.psd
+/_assets
