Updated appearance of inline-link

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
 .sass-cache
 .jekyll-metadata
 .idea
-/Gemfile
-/Gemfile.lock
+Gemfile
+Gemfile.lock
 node_modules/
 _site
 assets
 bower_components/
-/.publish/
+.publish/
 /css/
-/_assets
+_assets/*
+!_assets/scss
+!_assets/gulp_config
